--- a/css/etiketten.css
+++ b/css/etiketten.css
@@ -1,7 +1,8 @@
 #propertyPicker{float:left;position:relative;}#propertyPicker .close-app{position:absolute;z-index:1100;right:5px;top:5px;}
-#propertyPicker .left,#propertyPicker .right{min-width:400px;padding-top:10px;float:left;}
-#propertyPicker .right{margin-left:20px;}
-#propertyPicker ul{list-style:none;padding:5px;}
+#propertyPicker .left{padding-top:10px;float:left;margin-left:20px;}
+#propertyPicker .left:first-child{margin-left:0;}
+#propertyPicker .left:last-child{border-left:1px solid #DDD;padding-left:10px;}
+#propertyPicker ul{list-style:none;padding:5px;min-width:400px;}
 #propertyPicker li{margin:3px 0;padding:2px 0;border:1px solid #DDD;background-color:#EEE;}#propertyPicker li>.ui-icon:first-child,#propertyPicker li>span{float:left;}
 #propertyPicker li>.ui-icon:last-child{float:right;cursor:pointer;}
 #propertyPicker li.removeable{cursor:move;}
