started basic interface for print queue + altered less implementation to be more modular

--- a/css/etiketten.less
+++ b/css/etiketten.less
@@ -1,84 +1,3 @@
-#propertyPicker
-{
-	float:left;
-	position: relative;
+@import 'src/categoryInspect.less';
 
-	.close-app{
-		position: absolute;
-		z-index: 1100;
-		right: 5px;
-		top: 5px;
-	}
-
-	.left{
-		padding-top: 10px;
-		float:left;
-		margin-left: 20px;
-	}
-	.left:first-child{
-		margin-left: 0;
-	}
-
-	.left:last-child{
-		border-left: 1px solid #DDD;
-		padding-left: 10px;
-	}
-
-	ul{
-		list-style: none;
-		padding: 5px;
-		min-width: 400px;
-	}
-
-	li{
-		margin: 3px 0;
-		padding: 2px 0;
-		border: 1px solid #DDD;
-		background-color: #EEE;
-
-		> .ui-icon:first-child, > span{
-			float:left;
-		}
-
-		> .ui-icon:last-child{
-			float:right;
-			cursor: pointer;
-		}
-	}
-
-	li.removeable{
-		cursor: move;
-	}
-
-	li.addable{
-		cursor: pointer;
-	}
-
-	li.added{
-		@color : #dff0d8;
-		@lighter: darken(@color, 20%);
-		border: 1px solid darken(@color, 50%);
-		background-image: -webkit-linear-gradient(top, @color, @lighter);
-		background-image: -moz-linear-gradient(top, @color, @lighter);
-		background-image: -o-linear-gradient(top, @color, @lighter);
-		background-image: -ms-linear-gradient(top, @color, @lighter);
-		background-image: linear-gradient(top, @color, @lighter);
-	}
-
-	li.removed{
-		@color : #f2dede;
-		@lighter: darken(@color, 20%);
-		border: 1px solid darken(@color, 50%);
-		background-image: -webkit-linear-gradient(top, @color, @lighter);
-		background-image: -moz-linear-gradient(top, @color, @lighter);
-		background-image: -o-linear-gradient(top, @color, @lighter);
-		background-image: -ms-linear-gradient(top, @color, @lighter);
-		background-image: linear-gradient(top, @color, @lighter);
-	}
-
-	#addableContainer{
-		.addable{
-			padding-left: 30px;
-		}
-	}
-}
+@import 'src/printQueue.less';
