--- a/css/src/categoryInspect.less
+++ b/css/src/categoryInspect.less
@@ -11,7 +11,6 @@
 	}
 
 	.left{
-		padding-top: 10px;
 		float:left;
 		margin-left: 20px;
 	}
@@ -22,6 +21,25 @@
 	.left:last-child{
 		border-left: 1px solid #DDD;
 		padding-left: 10px;
+	}
+
+	.left h3{
+		margin-top : 0;
+	}
+
+	.info{
+		padding: 10px;
+		background-color: #DDD;
+		margin-bottom: 10px;
+	}
+
+	#info_type_settings label{
+		margin-right: 10px;
+	}
+
+	#info_type_settings
+	{
+		margin: 15px;
 	}
 
 	ul{
