--- a/css/etiketten.less
+++ b/css/etiketten.less
@@ -2,8 +2,10 @@
 
 @import 'src/printQueue.less';
 
+@import 'src/confirmation.less';
 
-
-.dequeue{
-	cursor: pointer;
+.info{
+	padding: 10px;
+	background-color: #DDD;
+	margin-bottom: 10px;
 }
